Changed card shadow to be more diffuse to better show the borders between cards. fixed issue where whitespace description showed the 'Description:' heading. Thickened color bar and removed shadow in favour of border. fixed issue where events associated with no sprints had sharp corners.

--- a/portfolio/src/main/resources/static/styles/pages/project_details.css
+++ b/portfolio/src/main/resources/static/styles/pages/project_details.css
@@ -107,9 +107,8 @@ body {
 .colour-block {
     display: block;
     width: 100%;
-    height: 6px;
+    height: 8px;
     border-radius: 6px 6px 0 0;
-    box-shadow: 0 0px 3px rgb(0 0 0 / 36%);
     border-bottom: 1px solid rgb(217 217 217);
 }
 
@@ -307,8 +306,7 @@ textarea {
     box-shadow: 0 0px 2px rgb(0 0 0 / 36%);
 }
 
-.colour-block-card {
-    border-radius: 0  0 12px 12px;
+.card-contents {
     padding: 25px;
 }
 
